# first_hometask_cpp

./: CMakeLists.txt
include/: header.h  main.cpp
src/: main.cpp  source.cpp
vs/Debug/: first_homework_niit.ilk
vs/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
vs/first_homework_niit.dir/Debug/first_ho.F6057BF2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
